# stamp

./: README.md  docker-compose.yml  example.csv
backend/: .dockerignore  Dockerfile
backend/src/: main.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: Home.js  Quiz.js
frontend/src/utils/: apiConfig.js
scripts/: test-network.sh
stamp_backend/: Dockerfile  pyproject.toml
stamp_backend/src/: main.py
stamp_frontend/: .dockerignore  package-lock.json  package.json
stamp_frontend/src/components/: Home.js  Quiz.js
